refactor: Simplify shell command configurations and add descriptions for tasks in tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,40 +26,30 @@
       "shell": {
         // "executable": "powershell.exe",
         "executable": "pwsh.exe",
-        "args": [
-          "-NoProfile",
-          "-ExecutionPolicy",
-          "Bypass",
-          "-Command"
-        ]
+        "args": ["-NoProfile", "-ExecutionPolicy", "Bypass", "-Command"]
       }
     }
   },
   "linux": {
     "options": {
       "shell": {
-        "executable": "/usr/bin/pwsh",
-        "args": [
-          "-NoProfile",
-          "-Command"
-        ]
+        "executable": "pwsh",
+        "args": ["-NoProfile", "-Command"]
       }
     }
   },
   "osx": {
     "options": {
       "shell": {
-        "executable": "/usr/local/bin/pwsh",
-        "args": [
-          "-NoProfile",
-          "-Command"
-        ]
+        "executable": "pwsh",
+        "args": ["-NoProfile", "-Command"]
       }
     }
   },
   "tasks": [
     {
       "label": ".",
+      "description": "Default build task",
       "type": "shell",
       "command": "$PSVersionTable;Invoke-Build -Task . -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -74,6 +64,7 @@
     },
     {
       "label": "TestLocal",
+      "description": "Run tests locally without integration tests",
       "type": "shell",
       "command": "Invoke-Build -Task TestLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -85,6 +76,7 @@
     },
     {
       "label": "HelpLocal",
+      "description": "Generate local help documentation",
       "type": "shell",
       "command": "Invoke-Build -Task HelpLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -96,6 +88,7 @@
     },
     {
       "label": "Clean",
+      "description": "Clean build artifacts and temporary files",
       "type": "shell",
       "command": "Invoke-Build -Task Clean -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -107,6 +100,7 @@
     },
     {
       "label": "ValidateRequirements",
+      "description": "Validate project requirements are met",
       "type": "shell",
       "command": "Invoke-Build -Task ValidateRequirements -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -118,9 +112,10 @@
     },
     {
       "label": "Analyze",
+      "description": "Run PowerShell script analysis",
       "type": "shell",
-      "problemMatcher": "$msCompile",
       "command": "Invoke-Build -Task Analyze -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
         "showReuseMessage": false
@@ -129,6 +124,7 @@
     },
     {
       "label": "AnalyzeTests",
+      "description": "Analyze test files for issues",
       "type": "shell",
       "command": "Invoke-Build -Task AnalyzeTests -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -140,6 +136,7 @@
     },
     {
       "label": "FormattingCheck",
+      "description": "Check code formatting compliance",
       "type": "shell",
       "command": "Invoke-Build -Task FormattingCheck -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -151,6 +148,7 @@
     },
     {
       "label": "Test",
+      "description": "Run all tests (unit and integration)",
       "type": "shell",
       "command": "Invoke-Build -Task Test -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -165,6 +163,7 @@
     },
     {
       "label": "DevCC",
+      "description": "Generate code coverage report for development",
       "type": "shell",
       "command": "Invoke-Build -Task DevCC -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -176,6 +175,7 @@
     },
     {
       "label": "Build",
+      "description": "Full build with all validations",
       "type": "shell",
       "command": "Invoke-Build -Task Build -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -187,6 +187,7 @@
     },
     {
       "label": "BuildNoIntegration",
+      "description": "Build without integration tests",
       "type": "shell",
       "command": "Invoke-Build -Task BuildNoIntegration -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -198,6 +199,7 @@
     },
     {
       "label": "IntegrationTest",
+      "description": "Run integration tests only",
       "type": "shell",
       "command": "Invoke-Build -Task IntegrationTest -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
       "problemMatcher": "$msCompile",
@@ -209,15 +211,21 @@
     },
     {
       "label": "PesterTest",
+      "description": "Run Pester unit tests with detailed output",
       "type": "shell",
-      "command": "Invoke-Pester '${workspaceFolder}/src/Tests/Unit' -Output Detailed",
+      "command": "Invoke-Pester '${workspaceFolder}/tests/Unit' -Output Detailed",
       "problemMatcher": "$pester",
+      "presentation": {
+        "echo": false,
+        "showReuseMessage": false
+      },
       "group": "test"
     },
     {
       "label": "Pester-Single-Coverage",
+      "description": "Run single test with code coverage",
       "type": "shell",
-      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';$pesterConfig = New-PesterConfiguration;$pesterConfig.run.Path = '${workspaceFolder}/src/Tests/Unit/*/${input:functionName}.Tests.ps1';$pesterConfig.CodeCoverage.Enabled = $true;$pesterConfig.CodeCoverage.Path = '${workspaceFolder}/src/${workspaceFolderBasename}/*/${input:functionName}.ps1';Invoke-Pester -Configuration $pesterConfig",
+      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';$pesterConfig = New-PesterConfiguration;$pesterConfig.run.Path = '${workspaceFolder}/tests/Unit/*/${input:functionName}.Tests.ps1';$pesterConfig.CodeCoverage.Enabled = $true;$pesterConfig.CodeCoverage.Path = '${workspaceFolder}/src/${workspaceFolderBasename}/*/${input:functionName}.ps1';Invoke-Pester -Configuration $pesterConfig",
       "problemMatcher": "$pester",
       "presentation": {
         "echo": false,
@@ -227,8 +235,9 @@
     },
     {
       "label": "Pester-Single-Detailed",
+      "description": "Run single test with detailed output",
       "type": "shell",
-      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';Invoke-Pester '${workspaceFolder}/src/Tests/Unit/*/${input:functionName}.Tests.ps1' -Output Detailed",
+      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';Invoke-Pester '${workspaceFolder}/tests/Unit/*/${input:functionName}.Tests.ps1' -Output Detailed",
       "problemMatcher": "$pester",
       "presentation": {
         "echo": false,
@@ -238,8 +247,9 @@
     },
     {
       "label": "DevCC-Single",
+      "description": "Generate code coverage for single test",
       "type": "shell",
-      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';$pesterConfig = New-PesterConfiguration;$pesterConfig.run.Path = '${workspaceFolder}/src/Tests/Unit/*/${input:functionName}.Tests.ps1';$pesterConfig.CodeCoverage.Enabled = $true;$pesterConfig.CodeCoverage.Path = '${workspaceFolder}/src/${workspaceFolderBasename}/*/${input:functionName}.ps1';$pesterConfig.CodeCoverage.OutputPath = '${workspaceFolder}/cov.xml';$pesterConfig.CodeCoverage.OutputFormat = 'CoverageGutters';Invoke-Pester -Configuration $pesterConfig",
+      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';$pesterConfig = New-PesterConfiguration;$pesterConfig.run.Path = '${workspaceFolder}/tests/Unit/*/${input:functionName}.Tests.ps1';$pesterConfig.CodeCoverage.Enabled = $true;$pesterConfig.CodeCoverage.Path = '${workspaceFolder}/src/${workspaceFolderBasename}/*/${input:functionName}.ps1';$pesterConfig.CodeCoverage.OutputPath = '${workspaceFolder}/cov.xml';$pesterConfig.CodeCoverage.OutputFormat = 'CoverageGutters';Invoke-Pester -Configuration $pesterConfig",
       "problemMatcher": "$pester",
       "presentation": {
         "echo": false,
@@ -249,8 +259,9 @@
     },
     {
       "label": "Integration-Single-Detailed",
+      "description": "Run single integration test with detailed output",
       "type": "shell",
-      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';Invoke-Pester '${workspaceFolder}/src/Tests/Integration/*/${input:functionName}.Tests.ps1' -Output Detailed",
+      "command": "Import-Module -Name '${workspaceFolder}/src/${workspaceFolderBasename}/${workspaceFolderBasename}.psm1';Invoke-Pester '${workspaceFolder}/tests/Integration/*/${input:functionName}.Tests.ps1' -Output Detailed",
       "problemMatcher": "$pester",
       "presentation": {
         "echo": false,
