Update task file paths in tasks.json to point to the build directory

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -51,7 +51,7 @@
       "label": ".",
       "description": "Default build task",
       "type": "shell",
-      "command": "$PSVersionTable;Invoke-Build -Task . -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "$PSVersionTable;Invoke-Build -Task . -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -66,7 +66,7 @@
       "label": "TestLocal",
       "description": "Run tests locally without integration tests",
       "type": "shell",
-      "command": "Invoke-Build -Task TestLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task TestLocal -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -78,7 +78,7 @@
       "label": "HelpLocal",
       "description": "Generate local help documentation",
       "type": "shell",
-      "command": "Invoke-Build -Task HelpLocal -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task HelpLocal -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -90,7 +90,7 @@
       "label": "Clean",
       "description": "Clean build artifacts and temporary files",
       "type": "shell",
-      "command": "Invoke-Build -Task Clean -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task Clean -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -102,7 +102,7 @@
       "label": "ValidateRequirements",
       "description": "Validate project requirements are met",
       "type": "shell",
-      "command": "Invoke-Build -Task ValidateRequirements -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task ValidateRequirements -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -114,7 +114,7 @@
       "label": "Analyze",
       "description": "Run PowerShell script analysis",
       "type": "shell",
-      "command": "Invoke-Build -Task Analyze -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task Analyze -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -126,7 +126,7 @@
       "label": "AnalyzeTests",
       "description": "Analyze test files for issues",
       "type": "shell",
-      "command": "Invoke-Build -Task AnalyzeTests -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task AnalyzeTests -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -138,7 +138,7 @@
       "label": "FormattingCheck",
       "description": "Check code formatting compliance",
       "type": "shell",
-      "command": "Invoke-Build -Task FormattingCheck -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task FormattingCheck -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -150,7 +150,7 @@
       "label": "Test",
       "description": "Run all tests (unit and integration)",
       "type": "shell",
-      "command": "Invoke-Build -Task Test -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task Test -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -165,7 +165,7 @@
       "label": "DevCC",
       "description": "Generate code coverage report for development",
       "type": "shell",
-      "command": "Invoke-Build -Task DevCC -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task DevCC -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -177,7 +177,7 @@
       "label": "Build",
       "description": "Full build with all validations",
       "type": "shell",
-      "command": "Invoke-Build -Task Build -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task Build -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -189,7 +189,7 @@
       "label": "BuildNoIntegration",
       "description": "Build without integration tests",
       "type": "shell",
-      "command": "Invoke-Build -Task BuildNoIntegration -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task BuildNoIntegration -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
@@ -201,7 +201,7 @@
       "label": "IntegrationTest",
       "description": "Run integration tests only",
       "type": "shell",
-      "command": "Invoke-Build -Task IntegrationTest -File '${workspaceFolder}/src/${workspaceFolderBasename}.Build.ps1'",
+      "command": "Invoke-Build -Task IntegrationTest -File ''${workspaceFolder}/build/${workspaceFolderBasename}.Build.ps1''",
       "problemMatcher": "$msCompile",
       "presentation": {
         "echo": false,
