--- a/.github/workflows/2 - Release and Publish.yml
+++ b/.github/workflows/2 - Release and Publish.yml
@@ -7,9 +7,7 @@ on:
       - main
     paths:
       - "src/DLLPickle/**"
-      - "!src/Archive/**"
-      - "!src/Artifacts/**"
-      - "!**.md"
+      - "module/**"
   workflow_dispatch:
     inputs:
       version_bump:
@@ -60,11 +58,6 @@ jobs:
       trigger_source: ${{ steps.determine_version.outputs.trigger_source }}
 
     steps:
-      - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@5ef0c079ce82195b2a36a210272d6b661572d83e # v2.14.2
-        with:
-          egress-policy: audit
-
       - name: Checkout repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
@@ -81,7 +74,7 @@ jobs:
         run: |
           # Use Get-VersionBump function to determine current and new versions.
           Write-Host "Analyzing conventional commits..."
-          $VersionResult  = & ./.github/scripts/Get-VersionBump.ps1
+          $VersionResult  = & ./.github/co-scripts/Get-VersionBump.ps1
           $ShouldRelease  = $VersionResult.ShouldRelease
           $NewVersionType = $VersionResult.NewVersionType
           $NewVersion     = $VersionResult.NewVersion
